<resources>
    <string name="test">Test Text</string>
    <string name="app_name">video45</string>
    <!-- Strings related to the main menu page -->
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="signUp">Sign Up</string>
    <!-- Strings related to the Sign Up Process -->
    <string name="photo_select">Select Photo</string>
    <string name="continue_">Continue</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="dev_user">matthew.rosettis@gmail.com</string>
    <string name="dev_password">video45Dev</string>
    <string name="dev_url">http://video45.cloudapp.net</string>
    <!--<string name="dev_url">http://10.0.2.2:5000</string>-->
    <string name="remember_user">Keep Me Logged In</string>
    <!--Strings related to the Menu Bar-->
    <string name="profile_picture_content_description">profile picture</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="Search">Search</string>
    <string name="user">User</string>
    <string name="menu_items_description">menu items</string>

    <string-array name="nav_options">
        <item>Public Feed</item>
        <item>Home Feed</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_main">video45</string>
    <string name="logo_content_description">video45 Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_title">Settings</string>

    <string name="nav_item_public">Public Feed</string>
    <string name="nav_item_home">Home Feed</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="action_new_video">New Video</string>
    <string name="action_select_video">Select Video</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="nav_item_sign_out">Sign Out</string>
    <string name="action_edit_video">Edit Video</string>
</resources>
