<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_public"
            android:icon="@drawable/ic_action_action_language"
            android:title="@string/nav_item_public"/>
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_action_toggle_star"
            android:title="@string/nav_item_home"/>
        <item
            android:id="@+id/nav_item_profile"
            android:icon="@drawable/ic_action_social_person_outline"
            android:title="@string/nav_item_profile"/>
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_action_action_settings"
            android:title="@string/nav_item_settings"/>
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_action_av_fast_rewind"
            android:title="@string/nav_item_logout"/>
    </group>

</menu>