<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_new_video"
        android:orderInCategory="95"
        android:title="@string/action_new_video"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_select_video"
        android:orderInCategory="96"
        android:title="@string/action_select_video"
        app:showAsAction="never"/>
    <!--<item
        android:id="@+id/action_sign_out"
        android:orderInCategory="99"
        android:title="@string/nav_item_sign_out"
        app:showAsAction="never"/>-->
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/nav_item_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="@string/Search"
        android:icon="@drawable/ic_action_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <!--<item
        android:id="@+id/action_user"
        android:orderInCategory="300"
        android:title="@string/user"
        android:icon="@drawable/ic_action_social_person_outline"
        app:showAsAction="ifRoom"/>-->
        android:id="@+id/action_edit_video"
        android:orderInCategory="96"
        android:title="@string/action_edit_video"
        app:showAsAction="never"/>
    <!--<item-->
        <!--android:id="@+id/action_user"-->
        <!--android:orderInCategory="300"-->
        <!--android:title="@string/user"-->
        <!--android:icon="@drawable/ic_action_social_person_outline"-->
        <!--app:showAsAction="ifRoom"/>-->
</menu>