<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:gravity="center_vertical|center_horizontal">


    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/loginLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" android:visibility="gone" />

        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                        android:text="@string/dev_user"
                        android:layout_height="wrap_content" android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress" android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/password" android:layout_width="match_parent"
                        android:text="@string/dev_password"
                        android:layout_height="wrap_content" android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified" android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button android:id="@+id/email_sign_in_button" style="@style/Drakify"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:background="@color/choiceBtn"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/constantLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/rememberCheckBox"
                android:padding="2dp"
                android:onClick="rememberUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_user" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="80sp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/facebookFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchor="@id/constantLogin"
        app:layout_anchorGravity="bottom|left|start"
        app:backgroundTint="@color/blue"
        android:src="@drawable/ic_action_maps_local_post_office"
        android:padding="10dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/twitterFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchor="@id/constantLogin"
        app:layout_anchorGravity="bottom|center"
        app:backgroundTint="@color/babyBlue"
        android:src="@drawable/ic_action_image_blur_on"
        android:padding="10dp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/googlePlusFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchor="@id/constantLogin"
        app:layout_anchorGravity="bottom|right|end"
        app:backgroundTint="@color/red"
        android:src="@drawable/ic_action_action_search"
        android:padding="10dp"/>
</android.support.design.widget.CoordinatorLayout>
